--- a/_posts/0000-01-02-mwofficer825.md
+++ b/_posts/0000-01-02-mwofficer825.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to Mwofficer825's slide"
 ---
 This is mwofficer825's slide
 Use the left arrow to go back!
