--- a/_posts/0000-01-02-mwofficer825.md
+++ b/_posts/0000-01-02-mwofficer825.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to Mwofficer825's slide"
 ---
-This is mwofficer825's slide
+This is my awesome slide
 Use the left arrow to go back!
